--- a/Tellure.CLI/Tellure.CLI.csproj
+++ b/Tellure.CLI/Tellure.CLI.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp2.0;netcoreapp2.1</TargetFrameworks>
+    <TargetFrameworks>netcoreapp2.0</TargetFrameworks>
     <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
 
