--- a/tsprocessor/TSProcessor.CLI/TSProcessor.CLI.csproj
+++ b/tsprocessor/TSProcessor.CLI/TSProcessor.CLI.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="CommandLineParser" Version="2.2.1" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.0.2" />
     <PackageReference Include="MongoDB.Driver" Version="2.6.1" />
+    <PackageReference Include="Serilog" Version="2.7.1" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="ServiceStack.Text" Version="5.1.0" />
   </ItemGroup>
 
