--- a/tsprocessor/TSProcessor.CLI/TSProcessor.CLI.csproj
+++ b/tsprocessor/TSProcessor.CLI/TSProcessor.CLI.csproj
@@ -5,12 +5,17 @@
     <TargetFrameworks>netcoreapp2.0</TargetFrameworks>
     <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
-
+  
+  <ItemGroup>
+    <PackageReference Include="ILLink.Tasks" Version="0.1.5-preview-1461378" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.8"></PackageReference>
+  </ItemGroup>
+  
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.2.1" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="2.0.2" />
     <PackageReference Include="MongoDB.Driver" Version="2.6.1" />
     <PackageReference Include="Serilog" Version="2.7.1" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="ServiceStack.Text" Version="5.1.0" />
   </ItemGroup>
@@ -19,5 +24,11 @@
     <ProjectReference Include="..\..\riowil\Riowil.Entities\Riowil.Entities.csproj" />
     <ProjectReference Include="..\..\riowil\Riowil.Lib\Riowil.Lib.csproj" />
     <ProjectReference Include="..\..\tellure\Tellure.Lib\Tellure.Lib.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
