--- a/tsprocessor/TSProcessor.CLI/TSProcessor.CLI.csproj
+++ b/tsprocessor/TSProcessor.CLI/TSProcessor.CLI.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <PackageReference Include="ILGPU" Version="0.3.0" />
     <PackageReference Include="ILLink.Tasks" Version="0.1.5-preview-1461378" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0"></PackageReference>
   </ItemGroup>
