--- a/app/TSProcessor.CLI/TSProcessor.CLI.csproj
+++ b/app/TSProcessor.CLI/TSProcessor.CLI.csproj
@@ -2,8 +2,14 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
+    <AssemblyName>tsprocessor</AssemblyName>
     <TargetFrameworks>netcoreapp2.1</TargetFrameworks>
     <NoWin32Manifest>true</NoWin32Manifest>
+
+    <VersionPrefix>0.4.2</VersionPrefix>
+    <Authors>Serge Matvienko, smatvienko@outlook.com</Authors>
+    <Product>Tellure TSProcessor</Product>
+    <RepositoryUrl>https://github.com/msvaillant/tellure</RepositoryUrl>
   </PropertyGroup>
   
   <ItemGroup>
