Feature: add generation of testing data, not only learning

--- a/app/TSProcessor.CLI/TSProcessor.CLI.csproj
+++ b/app/TSProcessor.CLI/TSProcessor.CLI.csproj
@@ -10,6 +10,7 @@
     <Authors>Serge Matvienko, smatvienko@outlook.com</Authors>
     <Product>Tellure TSProcessor</Product>
     <RepositoryUrl>https://github.com/msvaillant/tellure</RepositoryUrl>
+    <Version>0.4.3</Version>
   </PropertyGroup>
   
   <ItemGroup>
